--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
 
 title: [公主传说]
-describtion: [我从小娘不疼爹不爱，体弱多病，初高中同学们都欺负我。还好我天资聪颖，天生丽质，男生们都将我捧为掌上明珠，现在我搬到了拉芙山，又让所有男性都拜倒在了我的石榴裙下，让我来看看到底是哪位幸运儿，能最终获得我的芳心呢？]
+description: [我从小娘不疼爹不爱，体弱多病，初高中同学们都欺负我。还好我天资聪颖，天生丽质，男生们都将我捧为掌上明珠，现在我搬到了拉芙山，又让所有男性都拜倒在了我的石榴裙下，让我来看看到底是哪位幸运儿，能最终获得我的芳心呢？]
